bug:使用ado-cli run 等命令时错误不能输出

--- a/bin/src/createAppTemplate/ado-node-vue-ssr(vite)/src/client/router/index.ejs
+++ b/bin/src/createAppTemplate/ado-node-vue-ssr(vite)/src/client/router/index.ejs
@@ -6,7 +6,7 @@ let routes: RouteRecordRaw[] = [
   },
   {
     path: "/home",
-    component: () => import("@/pages/home/index.ejs"),
+    component: () => import("@/pages/home/index.vue"),
   },
 ];
 const router = createRouter({
