--- a/bin/src/createAppTemplate/ado-node-vue-ssr(vite)/src/client/store/index.ejs
+++ b/bin/src/createAppTemplate/ado-node-vue-ssr(vite)/src/client/store/index.ejs
@@ -1,4 +1,4 @@
-import useUserStore from "./modules/index.ejs";
+import useUserStore from "./modules/index";
 
 const store = {
   userStore: useUserStore(),
