--- a/bin/src/createAppTemplate/ado-node-vue-ssr(vite)/src/router/app/app.module.ejs
+++ b/bin/src/createAppTemplate/ado-node-vue-ssr(vite)/src/router/app/app.module.ejs
@@ -1,5 +1,5 @@
 import { Module } from "ado-node";
-import { appController } from "./app.controller.ejs";
+import { appController } from "./app.controller";
 import { UserController } from "../user/user.controller";
 
 @Module({
