--- a/bin/src/createAppTemplate/ado-node-vue-ssr(vite)/src/client/main.ejs
+++ b/bin/src/createAppTemplate/ado-node-vue-ssr(vite)/src/client/main.ejs
@@ -1,7 +1,7 @@
 import { createApp } from "vue";
 import "./style.css";
 import App from "./App.vue";
-import router from "./router/index.ejs";
+import router from "./router/index";
 import ElementPlus from "element-plus";
 import { createPinia } from "pinia";
 import "element-plus/dist/index.css";
