@ado/cli 运行和打包 命令行

--- a/bin/src/createAppTemplate/ado-node-vue-ssr(vite)/src/index.ejs
+++ b/bin/src/createAppTemplate/ado-node-vue-ssr(vite)/src/index.ejs
@@ -2,7 +2,7 @@ import { AdoNodeServer, Modules } from "ado-node";
 import express, { Express } from "express";
 import path from "path";
 import cors from "cors";
-import { appModule } from "../../ado-node/src/router/app/app.module";
+import { appModule } from "./router/app/app.module";
 
 @Modules({
   Modules: [appModule],
