--- a/bin/src/createAppTemplate/ado-node-vue-ssr(vite)/src/router/app/app.module.ejs
+++ b/bin/src/createAppTemplate/ado-node-vue-ssr(vite)/src/router/app/app.module.ejs
@@ -1,9 +1,9 @@
 import { Module } from "ado-node";
 import { appController } from "./app.controller";
-import { UserController } from "../user/user.controller";
+import { UserModule } from "../user/user.module";
 
 @Module({
   Controller: [appController],
-  Provider: [UserController],
+  Provider: [UserModule],
 })
 export class appModule {}
