--- a/bin/src/template/index.controller.ejs
+++ b/bin/src/template/index.controller.ejs
@@ -11,7 +11,8 @@ export class <%= templateFileName %>Controller extends AdoNodeController{
   hello() {
     return {
       msg:"ok",
-      code:0
+      code:0,
+      data:"hello world"
     }
   }
 
