--- a/bin/src/createAppTemplate/ado-rpc-server/src/server.ejs
+++ b/bin/src/createAppTemplate/ado-rpc-server/src/server.ejs
@@ -1,5 +1,4 @@
-// import { RpcServerModules } from "ado-node";
-import { RpcServerModules } from "ado-node";
+import { RpcServerModule,RpcServerBoost } from "ado-node";
 import { AnimalInterFace } from "./server/AnimalInterFace.server";
 import { DogInterFace } from "./server/DogInterFace.server";
 
@@ -10,5 +9,12 @@ import { DogInterFace } from "./server/DogInterFace.server";
   port: 9000,
   RpcServerController: [AnimalInterFace, DogInterFace],
 })
-// @ts-ignore
-class TestRpcServerModules {}
+class TestRpcServerModules {
+  constructor() {
+    const boost = RpcServerBoost(TestRpcServerModules);
+    boost()
+  }
+}
+
+new TestRpcServerModules()
+
