fix bug : 打包和 esm 的问题

--- a/bin/src/createAppTemplate/ado-node/src/index.ejs
+++ b/bin/src/createAppTemplate/ado-node/src/index.ejs
@@ -1,7 +1,7 @@
 import { AdoNodeServer, Modules } from "ado-node";
 import express, { Express } from "express";
 import path from "path";
-import { appModule } from "./router/app/app.module.ejs";
+import { appModule } from "./router/app/app.module";
 
 @Modules({
   Modules: [appModule],
