--- a/bin/src/createAppTemplate/ado-node/src/router/user/user.module.ejs
+++ b/bin/src/createAppTemplate/ado-node/src/router/user/user.module.ejs
@@ -1,5 +1,5 @@
 import { Module } from "ado-node";
-import { UserController } from './user.controller.ejs'
+import { UserController } from './user.controller'
 @Module({
   Controller:[UserController],
   Provider:[]
