--- a/bin/src/createAppTemplate/ado-node/src/router/app/app.module.ejs
+++ b/bin/src/createAppTemplate/ado-node/src/router/app/app.module.ejs
@@ -1,5 +1,5 @@
 import { Module } from "ado-node";
-import { appController } from "./app.controller.ejs";
+import { appController } from "./app.controller";
 import { UserModule } from "../user/user.module";
 
 @Module({
