--- a/bin/src/createAppTemplate/ado-node/src/router/user/user.controller.ejs
+++ b/bin/src/createAppTemplate/ado-node/src/router/user/user.controller.ejs
@@ -1,6 +1,6 @@
 import { AdoNodeController, Controller, Get, Inject } from "ado-node";
 import { UserService } from "./user.service";
-import { ret } from "../../config/ret.ejs";
+import { ret } from "../../config/ret";
 
 @Controller("/user")
 export class UserController extends AdoNodeController {
