fix bug:  promise.then & add  all race

--- a/bin/src/createAppTemplate/ado-rpc-server/src/index.ejs
+++ b/bin/src/createAppTemplate/ado-rpc-server/src/index.ejs
@@ -1,4 +1,4 @@
-import { RpcServerModule,RpcServerBoost } from "ado-node";
+import { RpcServerModules,RpcServerBoost } from "ado-node";
 import { AnimalInterFace } from "./server/AnimalInterFace.server";
 import { DogInterFace } from "./server/DogInterFace.server";
 
