--- a/bin/src/createAppTemplate/ado-rpc-server/src/index.ejs
+++ b/bin/src/createAppTemplate/ado-rpc-server/src/index.ejs
@@ -11,8 +11,10 @@ import { DogInterFace } from "./server/DogInterFace.server";
 })
 class TestRpcServerModules {
   constructor() {
-    const boost = RpcServerBoost(TestRpcServerModules);
-    boost()
+    setTimeout(()=>{
+      const boost = RpcServerBoost(TestRpcServerModules);
+      boost()
+    },0)
   }
 }
 
