--- a/bin/src/createAppTemplate/ado-rpc-server/src/index.ejs
+++ b/bin/src/createAppTemplate/ado-rpc-server/src/index.ejs
@@ -1,13 +1,7 @@
 import { RpcServerModules,RpcServerBoost } from "ado-node";
-import { AnimalInterFace } from "./server/AnimalInterFace.server";
-import { DogInterFace } from "./server/DogInterFace.server";
-
-
 
 @RpcServerModules({
-  host: "127.0.0.1",
-  port: 9000,
-  RpcServerController: [AnimalInterFace, DogInterFace],
+  RpcServerController: [],
 })
 class TestRpcServerModules {
   constructor() {
